--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_blue: ^0.8.0
   carousel_slider: ^4.2.1
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
