--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^4.2.1
   font_awesome_flutter: ^10.3.0
   intl: ^0.17.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
