--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   intl: ^0.17.0
   url_launcher: ^6.1.7
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
